css/styles.css
/*Custom Fonts Declared Here===============================*/
@font-face {
	font-family: lobster;
	src: url('../fonts/lobster.otf');
}

@font-face {
	font-family: arc;
	src: url('../fonts/arc.ttf');
}

@font-face {
	font-family: titillium;
	src: url('../fonts/titillium.otf');
}

@font-face {
	font-family: sintony;
	src: url('../fonts/sintony.otf');
}



#logo{
	width:160px;
	position: fixed;
	top: 3px;
	left: 35px;
}

#footerLogo{
	max-width:260px;
	position: absolute;
	bottom: 50px;
	right: 20px;
}

/* hide disclaimer by default=============================*/
.disclaimer{
	display: none;
}

/*Title Fonts=============================================*/
title {
  font-family: Helvetica, sans-serif;
}

 /*Header=================================================*/
h2 {
  font-family: sintony, Helvetica, sans-serif;
  font-size: 35px;
  color: black;
  margin: auto;
  text-align:center;
}

h3 {
  font-family: sintony, Helvetica, sans-serif;
  font-size: 20px;
  margin: auto;
  text-align:center;
}

h4 {
  font-family: sintony, Helvetica, sans-serif;
  font-size: 15px;
  margin: auto;
  text-align:center;
}

main{
  background-color: #C8C8C8;
  color: black;
  height:auto;

}

.pageTitle{
	padding-top: 50px;
	padding-bottom: 50px;
}

.pageTitle h2{
	margin-left: 250px;
    text-align:left;
}
/*Typical Paragraph Body==================================*/


p {
  font-family: titillium, Helvetica, sans-serif;
  font-size: 20px;
  color: inherit;
  padding-left: 15%;
  padding-right: 15%;
}

/*styles for report-activities*/
.act{
    display:none;
  }
  
  #otherType{
    visibility: hidden;
  }
  
  #reportingactResults{
    display: none;
  }

/*Nav=====================================================*/
nav {
	color: white;
	background-color: dodgerblue;
	color: white;
	background: rgba(0, 135, 208, 0.9);
	padding-left: 200px;
	height:50px;
	position:sticky;
	top:0;
	z-index: 1;
}

nav a{
	text-decoration: none;
	font-family: titillium;
	color: white;
	font-size: 25px;
	padding-left: 15px;
	padding-right: 15px;
	padding-top:6px;
	height:50px;
	display: inline-block;
}

.active{
	background-color: #0076d0;
	height:44px;
}

.nav a:hover{
	background-color: #0076d0;
	height:44px;
	text-shadow: 2px 2px #333333;
}



/*aside nav===============================================*/
aside{
	float: left;
	width:225px;
	position:fixed;
	top:50px;
	bottom: 0;
	z-index: 1;
}

#sideNav{
	overflow:auto;
	float: left;
	height:100%;
	width: 100%;
	margin:0px;
	padding:0px;
	padding-top:50px;
	background-color: #006399;
	transition: 0.5s;
}

#sideNavMoble{
	overflow:auto;
	float: left;
	height:100%;
	width: 100%;
	margin:0px;
	padding:0px;
	background-color: #006399;
	transition: 0.5s;
	display:none;
}

#sideNav a{
	margin:auto;
	height:45px;
	text-align:left;
	padding-left: 12px;
	padding-right:0px;
	margin-bottom:5px;
	width:99%;
	transition: 0.3s;
	font-size: 22px;
}

#sideNavMoble a{
	margin:auto;
	text-align:center;
	padding-left: 0px;
	padding-right:0px;
	width:100%;
	transition: 0.3s;
}

#sideNav a:hover{
	background-color: dodgerblue;
}

#sideNavMoble a:hover{
	background-color: dodgerblue;
}

#sideNavMoble .closebtn {
    margin:auto;
	text-align:center;
	padding-left: 0px;
	padding-right:0px;
	width:100%;
	transition: 0.3s;
	font-size: 25px;
}

.openbtn {
  font-size: 20px;
  cursor: pointer;
  background-color: #111;
  color: white;
  padding: 10px 15px;
  border: none;
  position:fixed;
  left:0;
  border-radius: 0 20px 20px 0;
  background: rgba(0, 135, 208, 0.9);
  top: 45px;


}

.openbtn:hover {
  background-color: #444;
}

#hamburger {
  transition: margin-left .5s;
  padding: 16px;
  display:none;

}

/*SLider===========================================*/
#moduleStart{
	width: 70%;
	margin:auto;
	min-height:400px;
	padding-bottom: 50px;
}
#moduleStartBtn{
	transition-duration: 0.5s;
	width:200px;
	background-color: rgba(0, 135, 208, 0.9);
	padding-top: 5px;
	padding-bottom: 5px;
	color:white;
	border-style:solid;
	border-color:black;
	border-radius:15px;
	border-width:1px;
}
#moduleStartBtn:hover{
	cursor: pointer;
	background-color: rgba(0, 135, 208, 0.6);
	
}

.moduleStartLinks{
	text-decoration:none;
	width:100%;
	padding-top: 10px;
	padding-bottom: 10px;
	display:block;
	float:left;
	background-color: rgba(0, 135, 208, 0.9);
	border-style:solid;
	border-color:black;
	border-radius:15px;
	border-width:1px;
	margin:2px;
	text-align:center;
	color:white;
}

.moduleStartLinks:hover{
	cursor: pointer;
	background-color: rgba(0, 135, 208, 0.6);
}

.moduleSlide {
	display: none;
	min-height: 500px;
	box-shadow: inset 0px 0px 10px 5px #888888;
	}



.moduleSlide:first-child {
    display: block;
	min-height: 500px;
}

.moduleSlide p{
	margin: 10px;
}

.moduleSlide h2{
	padding-top:20px;
}

.slideshowContainer {
  max-width: 85%;
  min-height: 500px;
  position: relative;
  margin-left: 250px;
  margin-right: 5%;
  background-color:lightgray;
  border-radius:10px;

}

.homeSlideshowContainer{
  width: 100%;
  min-height: 500px;
  position: relative;
  margin: auto;
	filter: brightness(90%)

}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 325px;
  width: auto;
  padding: 16px;
  margin-top: -22px;
  color: black;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 15px 15px 0;
  user-select: none;
  background-color: #C8C8C8;
  box-shadow: 11px 0px 20px 3px #888888;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 15px 0 0 15px;
  box-shadow: -11px 0px 20px 3px #888888;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
  color:white;
}

/* Number text (1/8 etc) */
.numberText {
  color: #000;
  font-size: 25px;
  padding: 8px 12px;
  position: absolute;
  bottom: 0;
  left: 5%;
  background-color: #C8C8C8;
  border-radius: 15px 15px 0 0;
  box-shadow: 0px -20px 15px 3px #888888;
}
/* ... */

